# ripple-offline-tool

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  circle.yml  conanfile.txt
.github/workflows/: clang-format.yml
Builds/CMake/: OfflineCov.cmake
ci/ubuntu/: build-and-test.sh
cmake/: OfflineInterface.cmake
src/: OfflineTool.cpp  OfflineTool.h  RippleKey.cpp  RippleKey.h  Serialize.cpp  Serialize.h
src/test/: KeyFileGuard.h  KnownTestData.h  OfflineTool_test.cpp  RippleKey_test.cpp  Serialize_test.cpp
